# rust_embedded

./: .gitignore
app/: Cargo.toml  memory.x
app/.cargo/: config.toml
app/src/: lib.rs  main.rs
discovery_mv2_timer/: Cargo.toml  Embed.toml
discovery_mv2_timer/.cargo/: config.toml
discovery_mv2_timer/src/: controls.rs  counter.rs  display.rs  main.rs  speaker.rs
discovery_mv2_timer/src/controls/: init.rs  interrupt.rs
discovery_mv2_timer/src/display/: show.rs
discovery_mv2_timer/src/speaker/: interrupt.rs
