[package]
name = "discovery_mv2_timer"
version = "0.1.0"
authors = ["functional-tim <tim.gravert@web.de>"]
edition = "2021"
description = "Counts down or up with the A and B buttons. Number is displayed with the LEDs as either binary number or decimal number."

[dependencies]
cortex-m-rt = "0.7.3"
critical-section-lock-mut = "0.1.2"
embedded-hal = "1.0.0"
microbit-v2 = "0.15.0"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"
tiny-led-matrix = "1.0.2"

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]
